# fAInEngine

./: .gitattributes  .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/include/: Application.h  Common.h  Engine.h  eng.h
engine/include/graphics/: GraphicsAPI.h  ShaderProgram.h  Texture.h  VertexLayout.h
engine/include/input/: InputManager.h
engine/include/io/: FileSystem.h
engine/include/render/: Material.h  Mesh.h  RenderQueue.h
engine/include/scene/: Component.h  GameObject.h  Scene.h
engine/include/scene/components/: CameraComponent.h  LightComponent.h  MeshComponent.h  PlayerControllerComponent.h
engine/include/vk/: VkHelpers.h  VulkanContext.h
engine/source/: Application.cpp  Engine.cpp
engine/source/graphics/: GraphicsAPI.cpp  ShaderProgram.cpp  Texture.cpp
engine/source/input/: InputManager.cpp
engine/source/io/: FileSystem.cpp
engine/source/render/: Material.cpp  Mesh.cpp  RenderQueue.cpp
engine/source/scene/: Component.cpp  GameObject.cpp  Scene.cpp
engine/source/scene/components/: CameraComponent.cpp  LightComponent.cpp  MeshComponent.cpp  PlayerControllerComponent.cpp
engine/source/vk/: VkHelpers.cpp  VulkanContext.cpp
include/: Game.h  TestObject.h
source/: Game.cpp  TestObject.cpp  main.cpp
